--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<h2>About</h2>
 						</header>
 						<p>I am a PhD student at the Institut für Mathematik in the University of Potsdam since June 2016.
-						My advisor is <a href= "http://www.statslab.cam.ac.uk/~ac866/page5.html">Alexandra Carpentier</a>,
+						My advisor is <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>,
 						who is the recipient of an <a href="http://www.dfg.de/en/research_funding/programmes/individual/emmy_noether/">Emmy Noether research grant</a>.
 						 My interests are at the interface of bandit theory, nonparametric statistics and anomaly detection. Ideally, I would like my work to help
 						tackle BCI and eye tracker problems, where sequentiality and adaptivity are important. I also keep an open eye on reinforcement learning and
@@ -44,11 +44,11 @@
 							<ul>
 								<li>
 								<p><b> Tight (lower) Bounds for the Fixed Budget Best Arm Identification Bandit Problem, COLT 2016 </b><br/>
-								with <a href= "http://www.statslab.cam.ac.uk/~ac866/page5.html">Alexandra Carpentier</a>.<br/>
+								with <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>.<br/>
 								</li>
 								<li>
 								<strong>An Optimal Algorithm for the Thresholding Bandit Problem, ICML 2016 </strong> <br/>
-								with <a href="mailto:mgutzeit {at} uni-potsdam.de">Maurilio Gutzeit</a> and <a href= "http://www.statslab.cam.ac.uk/~ac866/page5.html">Alexandra Carpentier</a>.
+								with <a href="mailto:mgutzeit {at} uni-potsdam.de">Maurilio Gutzeit</a> and <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>.
 								</li>
 							</ul>
 					</section>
@@ -58,7 +58,8 @@
 						<h2> Experience </h2>
 							<ul>
 								<li>
-								<p> <b> Research Internship at University of Potsdam (October 2015 - May 2016):</b> worked on my master's thesis for the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">MVA master at ENS Cachan</a> under the supervision of <a href= "http://www.statslab.cam.ac.uk/~ac866/page5.html">Alexandra Carpentier</a> and <a href="http://researchers.lille.inria.fr/~valko/hp/"> Michal Valko</a>.
+								<p> <b> Research Internship at University of Potsdam (October 2015 - May 2016):</b> worked on my master's thesis for the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">
+								MVA master at ENS Cachan</a> under the supervision of <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a> and <a href="http://researchers.lille.inria.fr/~valko/hp/"> Michal Valko</a>.
 								</li>
 								<li>
 								<b> Data Scientist at PriceMatch (June 2013 - February 2015):</b> worked on dynamic pricing with a reinforcement learning and machine learning flavor for a french start-up that was recently <a href="https://www.tnooz.com/article/priceline-acquires-pricematch-adds-revenue-management-hotel-tech-arsenal/"> acquired by Booking </a>.
