--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						My advisor is <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>,
 						who is the recipient of an <a href="http://www.dfg.de/en/research_funding/programmes/individual/emmy_noether/">Emmy Noether research grant</a>.
 						 My interests are at the interface of bandit theory, nonparametric statistics and anomaly detection. Ideally, I would like my work to help
-						tackle BCI and eye tracker problems, where sequentiality and adaptivity are important. I also keep an open eye on reinforcement learning and
+						tackle BCI and eye tracker problems, where sequentiality and adaptivity are important to speed up experiments. I also keep an open eye on reinforcement learning and
 						 dynamic pricing.</p>
 					</section>
 
