--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 						<h2>Publications</h2>
 							<ul>
 								<li>
-								<p><b> Tight (lower) Bounds for the Fixed Budget Best Arm Identification Bandit Problem, COLT 2016 </b><br/>
+								<p><b> <a href="https://arxiv.org/abs/1605.09004">Tight (lower) Bounds for the Fixed Budget Best Arm Identification Bandit Problem, COLT 2016 </a></b><br/>
 								with <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>.<br/>
 								</li>
 								<li>
-								<strong>An Optimal Algorithm for the Thresholding Bandit Problem, ICML 2016 </strong> <br/>
+								<strong><a href="https://arxiv.org/abs/1605.08671">An Optimal Algorithm for the Thresholding Bandit Problem, ICML 2016 </strong></a> <br/>
 								with <a href="mailto:mgutzeit {at} uni-potsdam.de">Maurilio Gutzeit</a> and <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>.
 								</li>
 							</ul>
