--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 						<p>I am a PhD student at the Institut für Mathematik in the University of Potsdam since June 2016.
 						My advisor is <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>,
 						who is the recipient of an <a href="http://www.dfg.de/en/research_funding/programmes/individual/emmy_noether/">Emmy Noether research grant</a>.
-						 My interests are at the interface of bandit theory, nonparametric statistics and anomaly detection. Ideally, I would like my work to help
-						tackle BCI and eye tracker problems, where sequentiality and adaptivity are important to speed up experiments. I also keep an open eye on reinforcement learning and
+						 My interests are at the interface of bandit theory, nonparametric statistics and active learning. I also keep an open eye on reinforcement learning and
 						 dynamic pricing.</p>
 					</section>
 
@@ -42,6 +41,10 @@
 					<section id="two">
 						<h2>Publications</h2>
 							<ul>
+								<li>
+								<p><b> <a href="https://arxiv.org/pdf/1703.05841.pdf">Adaptivity to Noise Parameters in Nonparametric Active Learning, COLT 2017 </a></b><br/>
+								with <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a> and <a href= "http://www.princeton.edu/~samory/">Samory Kpotufe</a>.<br/>
+								</li>
 								<li>
 								<p><b> <a href="https://arxiv.org/abs/1605.09004">Tight (lower) Bounds for the Fixed Budget Best Arm Identification Bandit Problem, COLT 2016 </a></b><br/>
 								with <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>.<br/>
