--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Publications</h2>
 							<ul>
 								<li>
-								<p><b> <a href="https://arxiv.org/pdf/1703.05841.pdf">Adaptivity to Noise Parameters in Nonparametric Active Learning, COLT 2017 </a></b><br/>
+								<p><b> <a href="https://arxiv.org/abs/1703.05841">Adaptivity to Noise Parameters in Nonparametric Active Learning, COLT 2017 </a></b><br/>
 								with <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a> and <a href= "http://www.princeton.edu/~samory/">Samory Kpotufe</a>.<br/>
 								</li>
 								<li>
