Update personal information

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/moi2.jpg" alt="" /></a>
 				<h1><strong>Andrea Locatelli</strong>,  PhD student<br />
-				at the <a href="http://www.math.uni-potsdam.de/">University of Potsdam</a>.</h1>
+				at the <a href="https://www.ovgu.de/">University of Magdeburg</a>.</h1>
 			</header>
 
 		<!-- Main -->
@@ -30,10 +30,10 @@
 						<header class="major">
 							<h2>About</h2>
 						</header>
-						<p>I am a PhD student at the Institut für Mathematik in the University of Potsdam since June 2016.
+						<p>I am a PhD student at the Institut für Mathematische Stochastik in the mathematics deparment at the Otto-von-Guericke-Universität Magdeburg.
 						My advisor is <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>,
 						who is the recipient of an <a href="http://www.dfg.de/en/research_funding/programmes/individual/emmy_noether/">Emmy Noether research grant</a>.
-						 My interests are at the interface of bandit theory, nonparametric statistics and active learning. I also keep an open eye on reinforcement learning and
+						 My interests are at the interface of multi-armed bandit, nonparametric statistics, active learning and optimization. I also keep an open eye on reinforcement learning and
 						 dynamic pricing.</p>
 					</section>
 
@@ -42,16 +42,20 @@
 						<h2>Publications</h2>
 							<ul>
 								<li>
+								<p><b> <a href="https://arxiv.org/abs/1711.09294">An Adaptive Strategy for Active Learning with Smooth Decision Boundary, under review </a></b><br/>
+								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a> and <a href= "http://www.princeton.edu/~samory/">Samory Kpotufe</a>.<br/>
+								</li>
+								<li>
 								<p><b> <a href="https://arxiv.org/abs/1703.05841">Adaptivity to Noise Parameters in Nonparametric Active Learning, COLT 2017 </a></b><br/>
-								with <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a> and <a href= "http://www.princeton.edu/~samory/">Samory Kpotufe</a>.<br/>
+								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a> and <a href= "http://www.princeton.edu/~samory/">Samory Kpotufe</a>.<br/>
 								</li>
 								<li>
 								<p><b> <a href="https://arxiv.org/abs/1605.09004">Tight (lower) Bounds for the Fixed Budget Best Arm Identification Bandit Problem, COLT 2016 </a></b><br/>
-								with <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>.<br/>
+								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.<br/>
 								</li>
 								<li>
 								<strong><a href="https://arxiv.org/abs/1605.08671">An Optimal Algorithm for the Thresholding Bandit Problem, ICML 2016 </strong></a> <br/>
-								with <a href="mailto:mgutzeit {at} uni-potsdam.de">Maurilio Gutzeit</a> and <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>.
+								with <a href="mailto:mgutzeit {at} uni-potsdam.de">Maurilio Gutzeit</a> and <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.
 								</li>
 							</ul>
 					</section>
@@ -61,7 +65,10 @@
 						<h2> Experience </h2>
 							<ul>
 								<li>
-								<p> <b> Research Internship at University of Potsdam (October 2015 - May 2016):</b> worked on my master's thesis for the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">
+								<p> <b> Visiting Student at Princeton University (October 2017 - December 2017):</b> working on active learning and contextual bandits with <a href= "http://www.princeton.edu/~samory/">Samory Kpotufe</a>.
+								</li>
+								<li>
+								<b> Research Internship at University of Potsdam (October 2015 - May 2016):</b> worked on my master's thesis for the <a href="http://www.math.ens-cachan.fr/version-francaise/formations/master-mva/">
 								MVA master at ENS Cachan</a> under the supervision of <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a> and <a href="http://researchers.lille.inria.fr/~valko/hp/"> Michal Valko</a>.
 								</li>
 								<li>
