--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Publications</h2>
 							<ul>
 								<li>
-								<p><b> <a href="https://arxiv.org/abs/1711.09294">An Adaptive Strategy for Active Learning with Smooth Decision Boundary, under review </a></b><br/>
+								<p><b> <a href="https://arxiv.org/abs/1711.09294">An Adaptive Strategy for Active Learning with Smooth Decision Boundary</a>, under review</b><br/>
 								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a> and <a href= "http://www.princeton.edu/~samory/">Samory Kpotufe</a>.<br/>
 								</li>
 								<li>
