--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 						<h2>Publications</h2>
 							<ul>
 								<li>
+								<p><b>Adaptivity to Smoothness in X-armed Bandits, COLT 2018</b><br/>
+								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.<br/>
+								</li>	
 								<p><b> <a href="https://arxiv.org/abs/1711.09294">An Adaptive Strategy for Active Learning with Smooth Decision Boundary, ALT 2018</a></b><br/>
 								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a> and <a href= "http://www.princeton.edu/~samory/">Samory Kpotufe</a>.<br/>
 								</li>
