--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>About</h2>
 						</header>
-						<p>I am a PhD student at the Institut für Mathematische Stochastik in the mathematics deparment at the Otto-von-Guericke-Universität Magdeburg.
+						<p>I am a PhD student at the Institut für Mathematische Stochastik in the mathematics deparment at the Otto-von-Guericke-Universität Magdeburg. I was previously in the same position at the University of Potsdam, hence my living in Berlin.
 						My advisor is <a href= "http://www.math.uni-potsdam.de/~carpentier/">Alexandra Carpentier</a>,
 						who is the recipient of an <a href="http://www.dfg.de/en/research_funding/programmes/individual/emmy_noether/">Emmy Noether research grant</a>.
 						 My interests are at the interface of multi-armed bandit, nonparametric statistics, active learning and optimization. I also keep an open eye on reinforcement learning and
