--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>Publications</h2>
 							<ul>
 								<li>
-								<p><b>Adaptivity to Smoothness in X-armed Bandits, COLT 2018</b><br/>
+									<p><b> <a> Adaptivity to Smoothness in X-armed Bandits </a>, COLT 2018</b><br/>
 								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.<br/>
 								</li>	
 								<p><b> <a href="https://arxiv.org/abs/1711.09294">An Adaptive Strategy for Active Learning with Smooth Decision Boundary, ALT 2018</a></b><br/>
