--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 						<h2>Publications</h2>
 							<ul>
 								<li>
-									<p><b> <a> Adaptivity to Smoothness in X-armed Bandits </a>, COLT 2018</b><br/>
+									<p><b> <a href="http://proceedings.mlr.press/v75/locatelli18a/locatelli18a.pdf"> Adaptivity to Smoothness in X-armed Bandits, COLT 2018 </a> </b><br/>
 								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.<br/>
-								</li>	
+								</li>
+								<li>
 								<p><b> <a href="https://arxiv.org/abs/1711.09294">An Adaptive Strategy for Active Learning with Smooth Decision Boundary, ALT 2018</a></b><br/>
 								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a> and <a href= "http://www.princeton.edu/~samory/">Samory Kpotufe</a>.<br/>
 								</li>
