--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
 						<h2>Publications</h2>
 							<ul>
 								<li>
+									<p><b> <a href="https://arxiv.org/pdf/1811.11043.pdf"> Rotting bandits are no harder than stochastic ones, AISTATS 2019 (accepted) </a> </b><br/>
+								with Julien Seznec, Michal Valko, Alessandro Lazaric and <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.<br/>
+								</li>
+								<li>
+									<p><b> Active multiple matrix completion with adaptive confidence sets, COLT 2018 </b><br/>
+								with Michal Valko and <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.<br/>
+								</li>
+								<li>
 									<p><b> <a href="http://proceedings.mlr.press/v75/locatelli18a/locatelli18a.pdf"> Adaptivity to Smoothness in X-armed Bandits, COLT 2018 </a> </b><br/>
 								with <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.<br/>
 								</li>
