--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 						<h2>Publications</h2>
 							<ul>
 								<li>
-									<p><b> <a href="https://arxiv.org/pdf/1811.11043.pdf"> Rotting bandits are no harder than stochastic ones, AISTATS 2019 (accepted) </a> </b><br/>
+									<p><b> <a href="https://arxiv.org/pdf/1811.11043.pdf"> Rotting bandits are no harder than stochastic ones, AiStats 2019 </a> </b><br/>
 								with Julien Seznec, Michal Valko, Alessandro Lazaric and <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.<br/>
 								</li>
 								<li>
-									<p><b> Active multiple matrix completion with adaptive confidence sets, COLT 2018 </b><br/>
+									<p><b> Active multiple matrix completion with adaptive confidence sets, AiStats 2019 </b><br/>
 								with Michal Valko and <a href= "https://sites.google.com/site/alexandracarpentierresearch/">Alexandra Carpentier</a>.<br/>
 								</li>
 								<li>
